TDP-494 : fix cell z-index

--- a/dataprep-webapp/src/components/widgets/modal/_modal.scss
+++ b/dataprep-webapp/src/components/widgets/modal/_modal.scss
@@ -57,6 +57,7 @@
     padding-top: 0.6em;
     text-align: left;
     visibility: hidden;
+    z-index: 100;
 
     @include media($large-screen) {
       padding-top: 8em;
